--- a/BenchmarkLeading0Count/BenchmarkLeading0Count.csproj
+++ b/BenchmarkLeading0Count/BenchmarkLeading0Count.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Program20191020-10am.cs" />
+  </ItemGroup>
+
 
 </Project>
